# fiat-prices-aggregator

./: .gitignore  CLAUDE.md  Cargo.toml  config.toml.example
src/: main.rs  shared.rs
src/api/: binance.rs  buda.rs  cripto_ya.rs  mercado_bitcoin.rs  shared.rs  yadio.rs
src/fiat/: ars.rs  brl.rs  clp.rs  cop.rs  mod.rs  mxn.rs  usd.rs
